Fix 'breadcrumb' styles on mobile, and remove 'directories' padding on small screens

--- a/_sass/_Breadcrumb.sass
+++ b/_sass/_Breadcrumb.sass
@@ -5,6 +5,11 @@
 ul.breadcrumb
   display: block
   margin: 0
+  padding: 0
+  white-space: nowrap
+  overflow: hidden
+  text-overflow: ellipsis
+  width: 100%
   li
     display: inline-block
     &::before
