--- a/_sass/_Directories.sass
+++ b/_sass/_Directories.sass
@@ -37,7 +37,6 @@
       text-overflow: ellipsis
       font-size: 1.7rem
       margin-bottom: .5rem
-      padding: 0 0 0 1rem
     .none
       font-style: italic
       opacity: .4
